--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,12 +6,14 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
 @import '~jquery-confirm/css/jquery-confirm.css';
 
 @import "~bootstrap-icons/font/bootstrap-icons";
 
 @import '~datatables.net-bs5/css/dataTables.bootstrap5.css';
 
+@import '../../node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css';
 
 @import '../css/main.css';
 
