Air datepicker düzenlemesi yapıldı

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,8 @@
 
 @import '~datatables.net-bs5/css/dataTables.bootstrap5.css';
 
-@import '../../node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css';
+@import '~air-datepicker/air-datepicker.css';
+
 
 @import '../css/main.css';
 
