--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,16 +8,19 @@ $line-height-base: 1.6;
 
 // Colors
 //$blue: #3490dc;
-$blue: #1d1148;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #e31e24;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
 
-$light: #fff;
+//$light: #fff;
+//$dark: #190e3d;
+
+$light: #eee;
 $dark: #190e3d;
